<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">UNCC Scavenger</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="endpoint">http://ec2-54-187-106-212.us-west-2.compute.amazonaws.com/</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_compass">Compass</string>
    <string name="title_activity_found">Found</string>
    <string name="compass_button_text">Compass</string>
    <string name="scan_button_text">Scan</string>
    <string name="back_button_text">Back</string>
    <string name="default_text">DEFAULT</string>
    <string name="found_text">Location Found!</string>
    <string name="see_more_text">More Location Information</string>
    <string name="try_more_button">Try Another Location</string>
    <string name="gps_disabled_message">GPS must be enabled to use the compass.Would you like to enable it now?</string>
    <string name="zxing_missing_message">zxing Barcode Scanner must be installed to scan QR codes. Would you like to install it now?</string>
    <string name="zxing_market_uri">market://details?id=com.google.zxing.client.android</string>
    <string name="dialog_ok_text">OK</string>
    <string name="dialog_cancel_text">Cancel</string>
    <string name="btnViewResult">View Result</string>

</resources>
